--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesla</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/main.css">
@@ -80,10 +81,13 @@
             </div>
         </div>
     </section>
-    
+
     <section class="video">
         <div class="container">
-            <iframe width="100%" height="400" src="https://www.youtube.com/embed/tw4jkyfY4HE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="400" src="https://www.youtube.com/embed/tw4jkyfY4HE"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </section>
 
@@ -128,7 +132,7 @@
                             <li>Ксеноновые фары</li>
                         </ul>
                     </div>
-                    
+
                 </div>
 
             </div>
@@ -178,7 +182,7 @@
                 </ul>
             </div>
         </div>
-    </footer> 
+    </footer>
 
 
 
